--- a/0/theme/css/style.css
+++ b/0/theme/css/style.css
@@ -456,7 +456,13 @@ Time: 14:48 EST
 
 	.full-screen section .wrap { background-color: #fff; }
 
-	.border { border: 1px solid #debc65; }
+	.border {
+    border: 1px solid #debc65;
+  }
+
+  .border-top {
+    border: 1px solid #c8c8c8; 
+  }
 
 	.box-shadow { box-shadow: 0 2px 2px rgba(100, 100, 100, 0.5); }
 
