--- a/0/theme/css/style.all.css
+++ b/0/theme/css/style.all.css
@@ -354,10 +354,12 @@ Time: 14:48 EST
 * @author https://github.com/earth3300
 * @license GPL v3.0
 *
+* Adapted from HTML5 / Created: 2017-12-15.
+*
 * File: 02-main.css
 * Created: 2016.12.15
-* Updated: 2018-11-09
-* Time: 18:49 EST
+* Updated: 2018-11-15
+* Time: 10:29 EST
 */
 
 /**
@@ -366,18 +368,6 @@ Time: 14:48 EST
 @media screen {
 
 	.commons-updated { background: #181102; }
-
-	/* Adapted from HTML5 / Created: 2017-12-15. */
-
-	/* SECTIONS:
-
-		GENERIC
-			HEADER, NAV:MENU, NAV:PREV-NEXT,
-			BODY, FOOTER, FULL-SCREEN, RESPONSIVE
-		CUSTOM
-	*/
-
-	/********** GENERIC STYLING BEGIN **********/
 
 	html {
 			padding: .12em;
@@ -461,7 +451,7 @@ Time: 14:48 EST
   }
 
   .border-top {
-    border: 1px solid #c8c8c8; 
+    border: 1px solid #c8c8c8;
   }
 
 	.box-shadow { box-shadow: 0 2px 2px rgba(100, 100, 100, 0.5); }
@@ -570,9 +560,13 @@ Time: 14:48 EST
 		border-top: none;
 	}
 
-	ul.has-parent li { border-bottom: 1px dashed #e7e7e7; }
+	ul.has-parent li {
+    border-bottom: 1px dashed #e7e7e7;
+  }
 
-	ul.has-parent li:last-child { border-bottom: 1px dashed #e7e7e7; }
+	ul.has-parent li:last-child {
+    border-bottom: 1px dashed #e7e7e7;
+  }
 
 	nav li a {
 		display: inline-block;
@@ -761,7 +755,9 @@ Time: 14:48 EST
 		padding: 0;
 	}
 
-	a { text-decoration: none; }
+	a {
+    text-decoration: none;
+  }
 
 	ul {
 		margin-left: 1em;
@@ -817,6 +813,10 @@ Time: 14:48 EST
 	.more {
 		font-weight: 500;
 	}
+
+  code {
+    font-family: mono;
+  }
 
 	/***** BODY END *****/
 
