--- a/0/theme/css/02-main.css
+++ b/0/theme/css/02-main.css
@@ -103,7 +103,7 @@
   }
 
   .border-top {
-    border: 1px solid #c8c8c8;
+    border-top: 1px solid #c8c8c8;
   }
 
 	.box-shadow { box-shadow: 0 2px 2px rgba(100, 100, 100, 0.5); }
@@ -568,10 +568,17 @@
 	}
 
 	.subdued {
-		opacity: 0.5;
 		font-size: 80%;
 		margin-bottom: 15px;
 	}
+
+  .subdued-dark {
+    opacity: 0.65;
+  }
+
+  .subdued-light {
+    opacity: 0.5;
+  }
 
 	.text-center {
 		text-align: center;
@@ -812,6 +819,11 @@
 		display: block;
 		margin: 0 auto;
 	}
+
+  iframe {
+    display: block;
+    margin: 0 auto;
+  }
 
 	article .border {
 		border: 1px solid #c8c8c8;
