--- a/0/theme/css/04-sprite.css
+++ b/0/theme/css/04-sprite.css
@@ -14,8 +14,8 @@
  *
  * File: 04-sprite.css
  * Created: 2018
- * Updated: 2018-11-07
- * Time: 12:02 EST
+ * Updated: 2018-11-15
+ * Time: 15:39 EST
  */
 
 @media all {
@@ -136,6 +136,7 @@
 	/* Row 3 (Set 2-3) */
 	.sprite .icon9x3, .equipment > .icon { background-position: -280px -70px; }
 	.sprite .icon10x3, .backpack .icon { background-position: -315px -70px; }
+  .sprite .icon11x3, .generator .icon { background-position: -350px -280px; }
 
 	.sprite .icon12x3, .sleep .icon { background-position: -385px -70px; }
 
@@ -167,13 +168,16 @@
 	/* Row 10 (Set 3-2) */
 	.sprite .icon1x10, .method > .icon { background-position: 0 -315px; }
 	.sprite .icon2x10, .growth .icon { background-position: -35px -315px; }
-	.sprite .icon3x10, .software .icon { background-position: -70px -315px; }
+  .sprite .icon3x10, .computing .icon { background-position: -70px -315px; }
+  .sprite .icon4x10, .software .icon { background-position: -105px -315px; }
 
 	/* Row 11 (Set 3-3) */
 	.sprite .icon1x11, .project > .icon { background-position: 0 -350px; }
 
 	/* Row 12 (Set 3-4) */
 	.sprite .icon1x12, .service > .icon { background-position: 0 -385px; }
+
+  .sprite .icon1x13, .power .icon { background-position: -350px -280px; }
 
 	/* Row 13 (Set 3-5) */
 	.sprite .icon1x13, .learning > .icon { background-position: 0 -420px; }
@@ -186,6 +190,7 @@
 
 	/* Row 16 (Set 3-8) */
 	.sprite .icon1x16, .wiki > .icon { background-position: 0 -525px; }
+  .sprite .icon2x16, .navigation > .icon { background-position: 35px -525px; }
 
 	.sprite .icon8x16, .how > .icon { background-position: -245px -525px; }
 
