--- a/0/theme/css/style.css
+++ b/0/theme/css/style.css
@@ -13,8 +13,8 @@ Tags: lightweight, simple
 
 File: 00-header.css
 Created: 2018-11-02
-Updated: 2018-11-26
-Time: 13:13 EST
+Updated: 2018-12-04
+Time: 09:09 EST
 */
 
 /**
@@ -48,8 +48,8 @@ Time: 13:13 EST
  *
  * File: 01-bootstrap.css
  * Created: 2016.12.15
- * Updated: 2018-11-06
- * Time: 12:09 EST
+ * Updated: 2018-12-04
+ * Time: 09:08 EST
  */
 
 /**
@@ -61,54 +61,91 @@ Time: 13:13 EST
  */
 @media all {
 
-	body {
-		height: 100%;
-	}
+  body {
+    font: 1em/1.6 sans-serif;
+    background-color: hsl(0, 0%, 100%);
+    color: hsl(0, 0%, 20%);
+    min-width: 480px;
+    max-width: 750px;
+    display: block;
+    margin: 0 auto;
+  }
 
-	body {
-		font: 1em/1.6 sans-serif;
-		background-color: hsl(0, 0%, 100%);
-		color: hsl(0, 0%, 20%);
-		min-width: 480px;
-		max-width: 750px;
-		display: block;
-		margin: 0 auto;
-	}
+  p {
+    margin: 1em 0;
+  }
 
-	p {
-		margin: 1em 0;
-	}
+  a {
+    color: hsl(204, 25%, 25%);
+    text-decoration: none;
+  }
 
-	a {
-		color: hsl(204, 25%, 25%);
-		text-decoration: none;
-	}
+  header,
+  footer {
+    text-align: center;
+  }
 
-	header,
-	footer {
-		text-align: center;
-	}
+  footer {
+    font-size: 90%;
+    opacity: .85;
+  }
 
-	footer {
-		font-size: 90%;
-		opacity: .85;
-	}
+  .absolute {
+    position: absolute;
+  }
 
-	.float-left {
-	  float: left !important;
-	}
+  html.absolute {
+    position: absolute;
+  }
 
-	.float-right {
-	  float: right;
-	}
+  html.absolute body {
+    position: absolute;
+  }
 
-	.float-none {
-	  float: none;
-	}
+  html.absolute main {
+    position: absolute;
+  }
 
-	.hide {
-		display: none;
-	}
+  html.screen-fill {
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+  }
+
+  html.screen-fill body {
+    max-width: 100% !important;
+  }
+
+  html.screen-fill body {
+    left: 10px;
+    top: 10px;
+    right: 10px;
+    bottom: 10px;
+  }
+
+  html.screen-fill main {
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+  }
+
+  .float-left {
+    float: left !important;
+  }
+
+  .float-right {
+    float: right;
+  }
+
+  .float-none {
+    float: none;
+  }
+
+  .hide {
+    display: none;
+  }
 
 }
 /* Media All End */
@@ -121,190 +158,190 @@ Time: 13:13 EST
  */
 @media screen {
 
-	/** The effect transitions over the time period specified. */
-	a {
+  /** The effect transitions over the time period specified. */
+  a {
 
-	}
+  }
 
-	/** The color of the link, before any action has been taken. */
-	a:link {
-		color: hsl(204, 25%, 25%);
-	}
+  /** The color of the link, before any action has been taken. */
+  a:link {
+    color: hsl(204, 25%, 25%);
+  }
 
-	/** Triggered after the element has been visited. */
-	a:visited {
-		color: hsl(204, 25%, 30%);
-	}
+  /** Triggered after the element has been visited. */
+  a:visited {
+    color: hsl(204, 25%, 30%);
+  }
 
-	/** The cursor changes to a pointer, when mouse is over element. */
-	a:hover {
-		cursor: pointer;
-	}
+  /** The cursor changes to a pointer, when mouse is over element. */
+  a:hover {
+    cursor: pointer;
+  }
 
-	/** Triggered when cursor is hovering over the element. */
-	a:hover {
-		color: hsl(75, 75%, 25%);
-	}
+  /** Triggered when cursor is hovering over the element. */
+  a:hover {
+    color: hsl(75, 75%, 25%);
+  }
 
-	/** Triggered when the element has focus, such as after tabbing to it. */
-	a:focus {
-		color: hsl(16, 75%, 50%);
-		outline: none;
-	}
+  /** Triggered when the element has focus, such as after tabbing to it. */
+  a:focus {
+    color: hsl(16, 75%, 50%);
+    outline: none;
+  }
 
-	/** Triggered when the element is active. */
-	a:active {
-		color: hsl(244, 50%, 25%);
-	}
+  /** Triggered when the element is active. */
+  a:active {
+    color: hsl(244, 50%, 25%);
+  }
 
-	.btn {
-	  display: inline-block;
-	  font-weight: 400;
-	  text-align: center;
-	  white-space: nowrap;
-	  vertical-align: middle;
-	  -webkit-user-select: none;
-	  -moz-user-select: none;
-	  -ms-user-select: none;
-	  user-select: none;
-	  border: 1px solid transparent;
-	  padding: 0.375rem 0.75rem;
-	  font-size: 1rem;
-	  line-height: 1.5;
-	  border-radius: 0.25rem;
-	  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-	}
+  .btn {
+    display: inline-block;
+    font-weight: 400;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: 0.25rem;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  }
 
-	.btn-primary {
-		color: #fff;
-		background-color: hsl(204, 75%, 35%);
-		border-color: hsl(204, 75%, 33%);
-	}
+  .btn-primary {
+    color: #fff;
+    background-color: hsl(204, 75%, 35%);
+    border-color: hsl(204, 75%, 33%);
+  }
 
-	.btn-primary:hover {
-		color: #fff;
-		background-color: #0069d9;
-		border-color: #0062cc;
-	}
+  .btn-primary:hover {
+    color: #fff;
+    background-color: #0069d9;
+    border-color: #0062cc;
+  }
 
-	.btn-primary:focus,
-	.btn-primary.focus {
-		box-shadow: 0 0 0 0.12rem hsla(204, 100%, 50%, 0.5);
-	}
+  .btn-primary:focus,
+  .btn-primary.focus {
+    box-shadow: 0 0 0 0.12rem hsla(204, 100%, 50%, 0.5);
+  }
 
-	.btn-primary.disabled,
-	.btn-primary:disabled {
-		color: #fff;
-		background-color: hsl(204, 75%, 25%);
-		border-color: hsl(204, 75%, 50%);
-	}
+  .btn-primary.disabled,
+  .btn-primary:disabled {
+    color: #fff;
+    background-color: hsl(204, 75%, 25%);
+    border-color: hsl(204, 75%, 50%);
+  }
 
-	.btn-primary:not(:disabled):not(.disabled):active,
-	.btn-primary:not(:disabled):not(.disabled).active,
-	.show > .btn-primary.dropdown-toggle {
-		color: #fff;
-		background-color: #0062cc;
-		border-color: #005cbf;
-	}
+  .btn-primary:not(:disabled):not(.disabled):active,
+  .btn-primary:not(:disabled):not(.disabled).active,
+  .show > .btn-primary.dropdown-toggle {
+    color: #fff;
+    background-color: #0062cc;
+    border-color: #005cbf;
+  }
 
-	.btn-primary:not(:disabled):not(.disabled):active:focus,
-	.btn-primary:not(:disabled):not(.disabled).active:focus,
-	.show > .btn-primary.dropdown-toggle:focus {
-		box-shadow: 0 0 0 0.2rem hsla(204, 100%, 50%, 0.5);
-	}
+  .btn-primary:not(:disabled):not(.disabled):active:focus,
+  .btn-primary:not(:disabled):not(.disabled).active:focus,
+  .show > .btn-primary.dropdown-toggle:focus {
+    box-shadow: 0 0 0 0.2rem hsla(204, 100%, 50%, 0.5);
+  }
 
-	.btn-secondary {
-	  color: #fff;
-	  background-color: #6c757d;
-	  border-color: #6c757d;
-	}
+  .btn-secondary {
+    color: #fff;
+    background-color: #6c757d;
+    border-color: #6c757d;
+  }
 
-	.btn-secondary:hover {
-	  color: #fff;
-	  background-color: #5a6268;
-	  border-color: #545b62;
-	}
+  .btn-secondary:hover {
+    color: #fff;
+    background-color: #5a6268;
+    border-color: #545b62;
+  }
 
-	.btn-secondary:focus,
-	.btn-secondary.focus {
-	  box-shadow: 0 0 0 0.2rem rgba(108, 117, 125, 0.5);
-	}
+  .btn-secondary:focus,
+  .btn-secondary.focus {
+    box-shadow: 0 0 0 0.2rem rgba(108, 117, 125, 0.5);
+  }
 
-	.btn-secondary.disabled,
-	.btn-secondary:disabled {
-	  color: #fff;
-	  background-color: #6c757d;
-	  border-color: #6c757d;
-	}
+  .btn-secondary.disabled,
+  .btn-secondary:disabled {
+    color: #fff;
+    background-color: #6c757d;
+    border-color: #6c757d;
+  }
 
-	.btn-secondary:not(:disabled):not(.disabled):active,
-	.btn-secondary:not(:disabled):not(.disabled).active,
-	.show > .btn-secondary.dropdown-toggle {
-	  color: #fff;
-	  background-color: #545b62;
-	  border-color: #4e555b;
-	}
+  .btn-secondary:not(:disabled):not(.disabled):active,
+  .btn-secondary:not(:disabled):not(.disabled).active,
+  .show > .btn-secondary.dropdown-toggle {
+    color: #fff;
+    background-color: #545b62;
+    border-color: #4e555b;
+  }
 
-	.btn-secondary:not(:disabled):not(.disabled):active:focus,
-	.btn-secondary:not(:disabled):not(.disabled).active:focus,
-	.show > .btn-secondary.dropdown-toggle:focus {
-	  box-shadow: 0 0 0 0.2rem rgba(108, 117, 125, 0.5);
-	}
+  .btn-secondary:not(:disabled):not(.disabled):active:focus,
+  .btn-secondary:not(:disabled):not(.disabled).active:focus,
+  .show > .btn-secondary.dropdown-toggle:focus {
+    box-shadow: 0 0 0 0.2rem rgba(108, 117, 125, 0.5);
+  }
 
-	/* Highlight the target, if it has a border. */
-	:target.border {
-		box-shadow: 0 0 0 0.12rem hsla(75, 75%, 25%, 0.5);
-	}
+  /* Highlight the target, if it has a border. */
+  :target.border {
+    box-shadow: 0 0 0 0.12rem hsla(75, 75%, 25%, 0.5);
+  }
 
-	/* Keep the target below the top of the page. */
-	:target::before {
-		content: "";
-		display: block;
-		height: 100px; /* fixed header height*/
-		margin-top: -100px; /* negative fixed header height */
-	}
+  /* Keep the target below the top of the page. */
+  :target::before {
+    content: "";
+    display: block;
+    height: 100px; /* fixed header height*/
+    margin-top: -100px; /* negative fixed header height */
+  }
 
-	/* Hide when less than 480px */
-	@media (max-width: 480px) {
-		.hide-phone {
-			display: none !important;
-		}
-	}
-
-	/* Hide when less than 991px */
-	@media (max-width: 991px) {
-		.hide-tablet {
-			display: none !important;
-		}
-	}
+  /* Hide when less than 480px */
+  @media (max-width: 480px) {
+    .hide-phone {
+      display: none !important;
+    }
+  }
 
   /* Hide when less than 991px */
-	@media (max-width: 991px) {
-		.show-desktop {
-			display: none !important;
-		}
-	}
+  @media (max-width: 991px) {
+    .hide-tablet {
+      display: none !important;
+    }
+  }
+
+  /* Hide when less than 991px */
+  @media (max-width: 991px) {
+    .show-desktop {
+      display: none !important;
+    }
+  }
 
   /* Show when greater than 992px */
-	@media (min-width: 992px) {
-		.show-desktop {
-			display: block;
-		}
-	}
+  @media (min-width: 992px) {
+    .show-desktop {
+      display: block;
+    }
+  }
 
-	/* Hide when less than 1799px */
-	@media (max-width: 1799px) {
-		.show-hd {
-			display: none !important;
-		}
-	}
+  /* Hide when less than 1799px */
+  @media (max-width: 1799px) {
+    .show-hd {
+      display: none !important;
+    }
+  }
 
   /* Show when greater than 1800px */
-	@media (min-width: 1800px) {
-			.show-hd {
-				display: block;
-			}
-		}
+  @media (min-width: 1800px) {
+      .show-hd {
+        display: block;
+      }
+    }
 }
 /* Media Screen End */
 
@@ -319,18 +356,18 @@ Time: 13:13 EST
  */
 @media print {
 
-	header,
-	footer {
-		display: none !important;
-	}
+  header,
+  footer {
+    display: none !important;
+  }
 
-	nav {
-		display: none !important;
-	}
-	article p {
-		widows: 4;
-		orphans: 4;
-	}
+  nav {
+    display: none !important;
+  }
+  article p {
+    widows: 4;
+    orphans: 4;
+  }
 }
 /* Media Print End */
 
