--- a/0/theme/css/01-bootstrap.css
+++ b/0/theme/css/01-bootstrap.css
@@ -113,6 +113,77 @@
     bottom: 0;
   }
 
+  html.screen-fill main {
+    padding: 0 !important;
+  }
+
+  html.screen-fill .grid {
+    position: absolute;
+  }
+
+  html.screen-fill .grid .unit {
+    position: absolute;
+  }
+
+  html.screen-fill .grid .unit > .inner {
+    position: absolute;
+  }
+
+  html.screen-fill .grid {
+    top: 3px;
+    right: 3px;
+    bottom: 3px;
+    left: 3px;
+  }
+
+  html.screen-fill .grid .size1of3 {
+    width: 33.333%;
+  }
+
+  html.screen-fill .grid .size1of3 {
+    height: 33.333%;
+  }
+
+  .grid .pos2x1,
+  .grid .pos2x2,
+  .grid .pos2x3 {
+    left: 33.333%;
+  }
+
+  .grid .pos3x1,
+  .grid .pos3x2,
+  .grid .pos3x3 {
+    left: 66.666%;
+  }
+
+  .grid .pos1x2,
+  .grid .pos2x2,
+  .grid .pos3x2 {
+    top: 33.333%;
+  }
+
+  .grid .pos1x3,
+  .grid .pos2x3,
+  .grid .pos3x3 {
+    top: 66.666%;
+  }
+
+  .grid .border {
+    margin: 0 !important;
+    box-shadow: none !important;
+  }
+
+  .grid .border.dashed {
+    border: 1px dashed #444 !important;
+  }
+
+  .grid .unit > .inner {
+    top: 3px;
+    right: 3px;
+    bottom: 3px;
+    left: 3px;
+  }
+
   .float-left {
     float: left !important;
   }
