--- a/0/theme/css/02-main.css
+++ b/0/theme/css/02-main.css
@@ -808,6 +808,10 @@
     border: 1px solid #424242;
   }
 
+  html.theme-dark .border {
+    border: 1px solid #444;
+  }
+
   /*** MEDIA END ***/
 
   /***** OTHER GENERIC START *****/
