--- a/0/theme/css/style.css
+++ b/0/theme/css/style.css
@@ -131,6 +131,77 @@ Time: 09:09 EST
     bottom: 0;
   }
 
+  html.screen-fill main {
+    padding: 0 !important;
+  }
+
+  html.screen-fill .grid {
+    position: absolute;
+  }
+
+  html.screen-fill .grid .unit {
+    position: absolute;
+  }
+
+  html.screen-fill .grid .unit > .inner {
+    position: absolute;
+  }
+
+  html.screen-fill .grid {
+    top: 3px;
+    right: 3px;
+    bottom: 3px;
+    left: 3px;
+  }
+
+  html.screen-fill .grid .size1of3 {
+    width: 33.333%;
+  }
+
+  html.screen-fill .grid .size1of3 {
+    height: 33.333%;
+  }
+
+  .grid .pos2x1,
+  .grid .pos2x2,
+  .grid .pos2x3 {
+    left: 33.333%;
+  }
+
+  .grid .pos3x1,
+  .grid .pos3x2,
+  .grid .pos3x3 {
+    left: 66.666%;
+  }
+
+  .grid .pos1x2,
+  .grid .pos2x2,
+  .grid .pos3x2 {
+    top: 33.333%;
+  }
+
+  .grid .pos1x3,
+  .grid .pos2x3,
+  .grid .pos3x3 {
+    top: 66.666%;
+  }
+
+  .grid .border {
+    margin: 0 !important;
+    box-shadow: none !important;
+  }
+
+  .grid .border.dashed {
+    border: 1px dashed #444 !important;
+  }
+
+  .grid .unit > .inner {
+    top: 3px;
+    right: 3px;
+    bottom: 3px;
+    left: 3px;
+  }
+
   .float-left {
     float: left !important;
   }
@@ -1191,6 +1262,10 @@ Time: 09:09 EST
   html.audio nav.next a {
     background: #313131;
     border: 1px solid #424242;
+  }
+
+  html.theme-dark .border {
+    border: 1px solid #444;
   }
 
   /*** MEDIA END ***/
