--- a/e/sgl/device/style.css
+++ b/e/sgl/device/style.css
@@ -97,7 +97,9 @@ Time: 17:00 EST
   html.screen-fill,
   html.screen-fill body,
   html.screen-fill main,
-  html.screen-fill video {
+  html.screen-fill video,
+  html.screen-fill iframe.map,
+  html.screen-fill iframe.video {
     position: absolute;
   }
 
@@ -120,7 +122,9 @@ Time: 17:00 EST
   }
 
   html.screen-fill main,
-  html.screen-fill video {
+  html.screen-fill video,
+  html.screen-fill iframe.map,
+  html.screen-fill iframe.video {
     left: 0;
     top: 0;
     right: 0;
