--- a/0/theme/css/01-bootstrap.css
+++ b/0/theme/css/01-bootstrap.css
@@ -92,7 +92,8 @@
     bottom: 0;
   }
 
-  html.screen-fill body {
+  html.screen-fill body,
+  html.screen-fill article {
     max-width: 100% !important;
   }
 
