--- a/0/theme/css/style.all.css
+++ b/0/theme/css/style.all.css
@@ -2090,7 +2090,7 @@ Time: 19:00 EST
 * File: 05-screen.css
 * Created: 2018.12.05
 * Updated: 2018-12-09
-* Time: 11:07 EST
+* Time: 14:40 EST
 */
 
 /* Screen Fill Begin (Absolutely positioned) */
@@ -2121,6 +2121,7 @@ Time: 19:00 EST
   html.screen main,
   html.screen article,
   html.screen section,
+  html.screen .grid img,
   html.screen video,
   html.screen iframe {
     position: absolute;
@@ -2151,6 +2152,12 @@ Time: 19:00 EST
     top: 10px;
     right: 10px;
     bottom: 10px;
+  }
+
+  html.screen .grid img {
+    max-width: 98%;
+    top: 50%;
+    transform: translateY(-50%);
   }
 
   html.screen,
@@ -2233,8 +2240,12 @@ Time: 19:00 EST
   }
 
   html.screen .grid .unit > .inner {
-    padding: 10px;
+    padding: 1%;
     overflow: hidden;
+  }
+
+  html.screen .grid .control .unit > .inner {
+    padding: 15px;
   }
 
   html.screen .grid.text .unit > .inner {
