--- a/0/theme/css/style.all.css
+++ b/0/theme/css/style.all.css
@@ -2158,6 +2158,7 @@ Time: 19:00 EST
     max-width: 98%;
     top: 50%;
     transform: translateY(-50%);
+    border-radius: 3px;
   }
 
   html.screen,
