--- a/0/theme/css/05-screen.css
+++ b/0/theme/css/05-screen.css
@@ -86,8 +86,8 @@
   }
 
   html.screen video,
-  html.screen iframe,
-  html.screen article {
+  html.screen iframe {
+    max-height: 100%;
   }
 
   html.screen main {
