--- a/0/theme/css/style.all.css
+++ b/0/theme/css/style.all.css
@@ -48,8 +48,8 @@ Time: 19:00 EST
  *
  * File: 01-bootstrap.css
  * Created: 2016.12.15
- * Updated: 2018-12-04
- * Time: 09:08 EST
+ * Updated: 2018-12-10
+ * Time: 09:07 EST
  */
 
 /**
@@ -92,152 +92,6 @@ Time: 19:00 EST
 
   .absolute {
     position: absolute;
-  }
-
-  html.screen-fill,
-  html.screen-fill body,
-  html.screen-fill main,
-  html.screen-fill video,
-  html.screen-fill iframe.map,
-  html.screen-fill iframe.video {
-    position: absolute;
-  }
-
-  html.screen-fill {
-    left: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
-  }
-
-  html.screen-fill body,
-  html.screen-fill article {
-    max-width: 100% !important;
-  }
-
-  html.screen-fill body {
-    left: 10px;
-    top: 10px;
-    right: 10px;
-    bottom: 10px;
-  }
-
-  html.screen-fill main,
-  html.screen-fill video,
-  html.screen-fill iframe.map,
-  html.screen-fill iframe.video {
-    left: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
-  }
-
-  html.screen-fill video {
-    width: 100% !important;
-    height: 100%;
-  }
-
-/* */
-
-  html.screen-fill {
-    left: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
-  }
-
-  html.screen-fill body {
-    max-width: 100% !important;
-  }
-
-  html.screen-fill body {
-    left: 10px;
-    top: 10px;
-    right: 10px;
-    bottom: 10px;
-  }
-
-  html.screen-fill main {
-    left: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
-  }
-
-  html.screen-fill main {
-    padding: 0 !important;
-  }
-
-  html.screen-fill .grid {
-    position: absolute;
-  }
-
-  html.screen-fill .grid {
-    top: 3px;
-    right: 3px;
-    bottom: 3px;
-    left: 3px;
-  }
-
-  html.screen-fill .grid .unit {
-    position: absolute;
-  }
-
-  html.screen-fill .grid .unit > .inner {
-    position: absolute;
-  }
-
-  html.screen-fill .grid .unit > .inner {
-    overflow: hidden;
-  }
-
-
-  html.screen-fill .grid .size1of3 {
-    width: 33.333%;
-  }
-
-  html.screen-fill .grid .size1of3 {
-    height: 33.333%;
-  }
-
-  .grid .pos2x1,
-  .grid .pos2x2,
-  .grid .pos2x3 {
-    left: 33.333%;
-  }
-
-  .grid .pos3x1,
-  .grid .pos3x2,
-  .grid .pos3x3 {
-    left: 66.666%;
-  }
-
-  .grid .pos1x2,
-  .grid .pos2x2,
-  .grid .pos3x2 {
-    top: 33.333%;
-  }
-
-  .grid .pos1x3,
-  .grid .pos2x3,
-  .grid .pos3x3 {
-    top: 66.666%;
-  }
-
-  .grid .border {
-    margin: 0 !important;
-    box-shadow: none !important;
-  }
-
-  .grid .border.dashed {
-    border: 1px dashed #444 !important;
-  }
-
-  .grid .unit > .inner {
-    top: 3px;
-    right: 3px;
-    bottom: 3px;
-    left: 3px;
   }
 
   .float-left {
@@ -2089,8 +1943,8 @@ Time: 19:00 EST
 *
 * File: 05-screen.css
 * Created: 2018.12.05
-* Updated: 2018-12-09
-* Time: 14:40 EST
+* Updated: 2018-12-10
+* Time: 09:00 EST
 */
 
 /* Screen Fill Begin (Absolutely positioned) */
@@ -2112,7 +1966,7 @@ Time: 19:00 EST
 
   html.screen {
     min-width: 800px;
-    min-height: 600px;
+    min-height: 450px;
     overflow-y: auto;
   }
 
@@ -2373,8 +2227,12 @@ Time: 19:00 EST
       display: none;
     }
 
-  html.screen .notice,
-  html.screen h3 {
+    /* Fix. */
+    html.screen .notice h3 {
+      display: block;
+    }
+
+  html.screen .notice {
     position: absolute;
     left: 0;
     right: 0;
@@ -2389,14 +2247,21 @@ Time: 19:00 EST
     opacity: 0.85;
   }
 
-  html.screen .notice h3 {
+  html.screen .notice > div {
+    position: absolute;
+    left: 0;
+    right: 0;
     top: 50%;
-    margin-top: -7px;
+    margin-top: -55px;
     display: block;
+  }
+
+  html.screen .notice p {
+    max-width: initial;
   }
 }
 
-@media screen and (max-width:320px) {
+@media screen and (max-width:799px) {
   html.screen #notice {
     display: block;
   }
