--- a/0/theme/css/05-screen.css
+++ b/0/theme/css/05-screen.css
@@ -106,12 +106,11 @@
   }
 
   html.screen h1 {
-    display: block !important;
-    font-size: 135%;
+    display: block;
   }
 
-  html.screen h2 {
-    font-size: 115%;
+  html.screen body {
+    font-size: 90%;
   }
 
   html.screen .grid.text h1 ,
@@ -170,7 +169,7 @@
   }
 
   html.screen .grid .control .unit > .inner {
-    padding: 3.33%;
+    padding: 3.333%;
   }
 
   html.screen .grid.text .unit > .inner {
@@ -289,7 +288,7 @@
     background-color: #efefef;
   }
 
-  .control {
+  html.screen .control {
     font-size: small;
   }
 
@@ -334,5 +333,15 @@
 @media screen and (max-width:799px) {
   html.screen #notice {
     display: block;
+  }
+}
+
+@media screen and (min-width:1440px) {
+  html.screen body {
+    font-size: 110%;
+  }
+
+  html.screen .control {
+    font-size: initial;
   }
 }
