--- a/0/theme/css/style.css
+++ b/0/theme/css/style.css
@@ -367,7 +367,7 @@ Time: 10:24 EST
  */
 @media screen {
 
-  .commons-updated { background: #181102; }
+  .updated { background: #181212; }
 
   html {
       padding: .12em;
@@ -381,7 +381,9 @@ Time: 10:24 EST
 
   /*** COLOR START ***/
 
-  html, body { background-color: #e6e6e6; }
+  html { background-color: #e6e6e6; }
+
+  body { background-color: #e6e6e6; }
 
   html, body { color: #222; }
 
