--- a/0/t/css/01-bootstrap.css
+++ b/0/t/css/01-bootstrap.css
@@ -30,8 +30,8 @@
  *
  * File: 01-bootstrap.css
  * Created: 2016.12.15
- * Updated: 2018-12-10
- * Time: 09:07 EST
+ * Updated: 2018-12-15
+ * Time: 20:05 EST
  */
 
 /**
@@ -103,6 +103,10 @@
  */
 @media screen {
 
+  :focus {
+    outline: initial;
+  }
+
   /** The effect transitions over the time period specified. */
   a {
 
@@ -131,7 +135,6 @@
   /** Triggered when the element has focus, such as after tabbing to it. */
   a:focus {
     color: hsl(16, 75%, 50%);
-    outline: none;
   }
 
   /** Triggered when the element is active. */
