--- a/0/t/css/style.css
+++ b/0/t/css/style.css
@@ -48,8 +48,8 @@ Time: 10:24 EST
  *
  * File: 01-bootstrap.css
  * Created: 2016.12.15
- * Updated: 2018-12-10
- * Time: 09:07 EST
+ * Updated: 2018-12-15
+ * Time: 20:05 EST
  */
 
 /**
@@ -121,6 +121,10 @@ Time: 10:24 EST
  */
 @media screen {
 
+  :focus {
+    outline: initial;
+  }
+
   /** The effect transitions over the time period specified. */
   a {
 
@@ -149,7 +153,6 @@ Time: 10:24 EST
   /** Triggered when the element has focus, such as after tabbing to it. */
   a:focus {
     color: hsl(16, 75%, 50%);
-    outline: none;
   }
 
   /** Triggered when the element is active. */
