--- a/0/t/css/05-screen.css
+++ b/0/t/css/05-screen.css
@@ -293,7 +293,7 @@
   }
 
   html.screen nav:hover {
-    background-color: #fff;
+    background-color: inherit;
   }
 
   html.screen.theme-dark nav:hover {
