--- a/0/t/css/style.all.css
+++ b/0/t/css/style.all.css
@@ -2235,7 +2235,7 @@ body .updated-date { color: #181216; }
   }
 
   html.screen nav:hover {
-    background-color: #fff;
+    background-color: inherit;
   }
 
   html.screen.theme-dark nav:hover {
