--- a/0/t/css/style.css
+++ b/0/t/css/style.css
@@ -13,11 +13,11 @@ Tags: lightweight, simple
 
 File: 00-header.css
 Created: 2018-11-02
-Updated: 2018-12-12
-Time: 10:24 EST
+Updated: 2018-12-22
+Time: 09:21 EST
 */
 
-body .updated-date { color: #181216; }
+body .updated-date { color: #181222; }
 
 /**
  * EC01 Bootstrap CSS
@@ -90,6 +90,10 @@ body .updated-date { color: #181216; }
   footer {
     font-size: 90%;
     opacity: .85;
+  }
+
+  pre {
+    overflow-x: auto;
   }
 
   .absolute {
